--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,16 @@
   <head>
     <title>Logistix</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= javascript_pack_tag 'index' %>
   </head>
 
   <body>
-    <%= yield %>
+    <%= render("layouts/nav") %>
+    <div class="container">
+      <div id="app" />
+    </div>
   </body>
 </html>
